Print stop times.